<resources>
    <string name="app_name">Komentar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_home">Naslovna</string>
    <string name="menu_latest">Najnovije</string>
    <string name="menu_video">Video</string>
    <string name="menu_search">Pretraga</string>
    <string name="text_name">Ime</string>
    <string name="text_email">Email</string>
    <string name="text_comment">Komentar</string>
    <string name="button_post_comment">Ostavi komentar</string>
    <string name="hint_search">Pretraži...</string>
    <string name="button_reply">Odgovori</string>
    <string name="header_comments">Komentari (0)</string>
    <string name="button_all_comments">SVI KOMENTARI</string>
    <string name="text_author">Autor:</string>
    <string name="text_source">Izvor:</string>
    <string name="text_related_news">Povezane vesti</string>
    <string name="text_tags">Tagovi</string>
    <string name="menu_most_read">Najčitanije</string>
    <string name="menu_most_commented">Komentari</string>
    <string name="text_loading_news">Učitavanje vesti</string>
    <string name="text_list_of_comments_is_empty">Lista komentara je prazna.</string>
    <string name="text_list_of_news_is_empty">Lista vesti je prazna.</string>
    <string name="text_comments">Komentari:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="komentari">KOMENTARI</string>
    <string name="povezane_vesti">POVEZANE VESTI</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bookmarks">Sačuvane</string>
    <string name="clear_all">Obriši sve</string>
    <string name="bookmarks_title">Sačuvane vesti</string>
    <string name="bookmarks_message">Da li ste sigurni da želite da obrišete sve sačuvane vesti?</string>
    <string name="bookmarks_delete_all">Obriši sve</string>
    <string name="bookmarks_cancel">Odustani</string>
    <string name="horoscope">Horoskop</string>
    <string name="weather">Vremenska prognoza</string>

</resources>